Revert "Fixed bugs on mobile view."
This reverts commit ebfea90799788191c1e2c6c215849a382fd1d6e7.

--- a/static/scss/components/_direction-card.scss
+++ b/static/scss/components/_direction-card.scss
@@ -74,7 +74,6 @@
 
         @media screen and (max-width: $md) {
             height: 65px;
-            font-size: 22px;
         }
     }
 }
